ci/policy-tests/kyverno/baseline/restrict-seccomp/pod-unconfined-fail.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: unconfined-workload
  namespace: default
spec:
  restartPolicy: Always
  containers:
  - name: app
    image: ghcr.io/example/app:1.0.0
    securityContext:
      seccompProfile:
        type: Unconfined
